Fix flex wrapping

--- a/src/components/page-panel/page-panel.scss
+++ b/src/components/page-panel/page-panel.scss
@@ -1,7 +1,7 @@
 cronk-page-panel {
   /* Component styles go here */
   display: inline-block;
-  padding: 0.5rem;
+  padding: 1%;
 
   &.panel-hidden {
     display: none;
